fix: workdir on front action

--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -13,7 +13,7 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: Front
+          path: Front
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
