fix: workdir on front action

--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -12,8 +12,6 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-        with:
-          path: Front
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -30,6 +28,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./Front
           push: true
           tags: user/app:latest
