--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,5 @@ Temporary Items
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,python,flask
+key
+key.pub
