--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,67 +3,54 @@ name: deploy application
 on:
   push:
     branches:
-      - 'main'
+      - "main"
 
 jobs:
   deploy:
-    name: Build and push backend
+    name: build docker image and deploy on vps
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: ./Front
           push: true
           tags: cchalop1/epitech-security-web:latest
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: ./API
           push: true
           tags: cchalop1/epitech-security-api:latest
-      - 
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Run playbook
+      - name: Run playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
           playbook: deploy.yml
           directory: ./
-          # Optional, SSH private key
           key: ${{secrets.SSH_PRIVATE_KEY}}
           inventory: |
             [all]
