--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  vars_files:
-    - ./vars.yml
+  # vars_files:
+  #   - ./vars.yml
   tasks:
     - include_tasks: start_docker.yml
