--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,13 +44,24 @@ jobs:
           context: ./API
           push: true
           tags: cchalop1/epitech-security-api:latest
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: root
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "docker-compose.yml"
+          target: "/root/docker-compose.yml"
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: root
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: whoami
+          script: |
+            docker-compose stop
+            docker-compose pull
+            docker-compose --build up
       
       # - name: Checkout
       #   uses: actions/checkout@v2
