feat: add ansible playbook for deploy docker

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
           script: |
             docker-compose stop
             docker-compose pull
-            docker-compose --build up
+            docker-compose up -d
       
       # - name: Checkout
       #   uses: actions/checkout@v2
