--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,21 @@ services:
     restart: always
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`epitech-owasp-2022.com`)"
-      - "traefik.http.routers.whoami.entrypoints=web"
+      - "traefik.http.routers.web.rule=Host(`epitech-owasp-2022.com`)"
+      - "traefik.http.routers.web.entrypoints=web"
+
+
+  api:
+    image: "cchalop1/epitech-security-api:latest"
+    container_name: "api"
+    restart: always
+    # TODO: move this env to secrests
+    environment:
+      - DATABASE_URL=mongodb+srv://3oXRARJmiq:mGx9efM7gNosQbFDJJJHBJif65o48ptcTxdHGa4z@cluster0.gmtnk.mongodb.net/AttackDefend?retryWrites=true&w=majority
+      - JWT_SECRET_KEY=4ak37XxZQH~BVXx3^(9Qga5:zM7_6Y(!S*z2JqRY377=.a2_a>8H5crfv!sT;_5}
+      - JWT_VALIDATION_KEY=y&QG&rLfp84vZkS!jvj6EyFt8A*bU?E#B&E7yZfy50T4XwB66O85*8KZUOxI@99C
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.api.rule=Host(`api.epitech-owasp-2022.com`)"
+      - "traefik.http.routers.api.entrypoints=web"
+      - traefik.port=5000 
