--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,19 @@ services:
     image: "traefik:v2.6"
     container_name: "traefik"
     command:
-      #- "--log.level=DEBUG"
+      - "--log.level=DEBUG"
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
+      - "--entrypoints.web.address=:443"
+      - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
+      - "--certificatesresolvers.myresolver.acme.email=clement.chalopin@gmail.com"
+      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
     ports:
-      - "80:80"
+      - "443:443"
       - "8080:8080"
     volumes:
+      - "./letsencrypt:/letsencrypt"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
   web:
@@ -24,20 +28,21 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.web.rule=Host(`epitech-owasp-2022.com`)"
-      - "traefik.http.routers.web.entrypoints=web"
+      - "traefik.http.routers.whoami.entrypoints=websecure"
+      - "traefik.http.routers.whoami.tls.certresolver=myresolver"
 
 
-  api:
-    image: "cchalop1/epitech-security-api:latest"
-    container_name: "api"
-    restart: always
-    # TODO: move this env to secrests
-    environment:
-      - DATABASE_URL=mongodb+srv://3oXRARJmiq:mGx9efM7gNosQbFDJJJHBJif65o48ptcTxdHGa4z@cluster0.gmtnk.mongodb.net/AttackDefend?retryWrites=true&w=majority
-      - JWT_SECRET_KEY=4ak37XxZQH~BVXx3^(9Qga5:zM7_6Y(!S*z2JqRY377=.a2_a>8H5crfv!sT;_5}
-      - JWT_VALIDATION_KEY=y&QG&rLfp84vZkS!jvj6EyFt8A*bU?E#B&E7yZfy50T4XwB66O85*8KZUOxI@99C
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`api.epitech-owasp-2022.com`)"
-      - "traefik.http.routers.api.entrypoints=web"
-      - "traefik.port=5000"
+  # api:
+  #   image: "cchalop1/epitech-security-api:latest"
+  #   container_name: "api"
+  #   restart: always
+  #   # TODO: move this env to secrests
+  #   environment:
+  #     - DATABASE_URL=mongodb+srv://3oXRARJmiq:mGx9efM7gNosQbFDJJJHBJif65o48ptcTxdHGa4z@cluster0.gmtnk.mongodb.net/AttackDefend?retryWrites=true&w=majority
+  #     - JWT_SECRET_KEY=4ak37XxZQH~BVXx3^(9Qga5:zM7_6Y(!S*z2JqRY377=.a2_a>8H5crfv!sT;_5}
+  #     - JWT_VALIDATION_KEY=y&QG&rLfp84vZkS!jvj6EyFt8A*bU?E#B&E7yZfy50T4XwB66O85*8KZUOxI@99C
+  #   labels:
+  #     - "traefik.enable=true"
+  #     - "traefik.http.routers.api.rule=Host(`api.epitech-owasp-2022.com`)"
+  #     - "traefik.http.routers.api.entrypoints=web"
+  #     - "traefik.port=5000"
