--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,42 +48,17 @@ jobs:
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
-          username: ubuntu
+          username: ec2-user
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "docker-compose.yml"
-          target: "/home/ubuntu/"
+          target: "/home/ec2-user/"
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
-          username: ubuntu
+          username: ec2-user
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             docker-compose stop
             docker-compose pull
             docker-compose up -d
-
-      
-      # - name: Checkout
-      #   uses: actions/checkout@v2
-      # - name: Set up Python 3.7
-      #   uses: actions/setup-python@v1
-      #   with:
-      #     python-version: 3.7
-      # - name: Run playbook
-      #   uses: dawidd6/action-ansible-playbook@v2
-      #   with:
-      #     playbook: deploy.yml
-      #     directory: ./
-      #     key: ${{secrets.SSH_PRIVATE_KEY}}
-      #     inventory: |
-      #       [all]
-      #       ansible_host=epitech-owasp-2022.com
-      #       ansible_user=root
-            
-      #       [defaults]
-      #       host_key_checking = False
-      #     options: |
-      #       --inventory .hosts
-      #       --extra-vars hello=there
-      #       --verbose
