--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,10 +6,12 @@ services:
     build:
       context: ./
       dockerfile: ./API/Dockerfile
+    env_file:
+      - .env
     environment:
-      - DATABASE_URL=mongodb+srv://3oXRARJmiq:mGx9efM7gNosQbFDJJJHBJif65o48ptcTxdHGa4z@cluster0.gmtnk.mongodb.net/AttackDefend?retryWrites=true&w=majority
-      - JWT_SECRET_KEY=4ak37XxZQH~BVXx3^(9Qga5:zM7_6Y(!S*z2JqRY377=.a2_a>8H5crfv!sT;_5}
-      - JWT_VALIDATION_KEY=y&QG&rLfp84vZkS!jvj6EyFt8A*bU?E#B&E7yZfy50T4XwB66O85*8KZUOxI@99C
+      - DATABASE_URL=${DATABASE_URL}
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - JWT_VALIDATION_KEY=${JWT_VALIDATION_KEY}
     restart: always
     ports:
       - 5000:5000
