--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,14 +4,10 @@ services:
   app:
     container_name: Attack_Defend_api
     build:
-      context: ./
-      dockerfile: ./API/Dockerfile
+      context: ./API
+      dockerfile: ./Dockerfile
     env_file:
-      - .env
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-      - JWT_VALIDATION_KEY=${JWT_VALIDATION_KEY}
+      - ./API/.env
     restart: always
     ports:
       - 5000:5000
