--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -14,6 +14,7 @@ flask-mongoengine==1.0.0
 flask-admin==1.5.8
 Flask-SuperAdmin==1.7.1
 Flask-WTF==0.15.1
+Flask-Cors==3.0.10
 green==3.3.0
 gunicorn==20.1.0
 idna==3.3
