fix: remove docker in pipline

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,5 +60,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             docker-compose stop
+            docker-compose rm -f
             docker-compose pull
             docker-compose up -d
